use maven and jmh